Support Ruyi image combos for fastboot flashing
Parse Ruyi image-combo entities into component-aware image entries and preserve each package's provisioning strategy during fastboot flashing. This keeps LicheePi 4A U-Boot combos on the LPi4A handoff path before flashing regular boot/root partitions.

Assisted-by: codex:gpt-5.5